# DGAN

./: CMakeLists.txt  Config.cmake.in  README.md
include/custom-modules/: dgan.hpp
